updated calculator, finished project

--- a/Task 1 - Technical skills/index.html
+++ b/Task 1 - Technical skills/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="heading">
+            <h2>Kaylem's online calculator</h2>
+        </div>
         <form name="calculator">
             <table>
             <tr>
